@@ -1441,6 +1441,9 @@ describing the status of the process, a connection-info generated by
 The connection-info also includes an alist ADDITIONAL-INFO.
 If FUNC returns non-nil and `twittering-buffer-related-p' is non-nil, the
 returned value is displayed as a message.
+And also, if FUNC returns a string and it matches the regular expression
+\"^\\\\(Failuare\\\\|Response\\\\): \", the returned value is displayed
+as a message.
 
 CLEAN-UP-FUNC is called whenever the sentinel of the subprocess for the
 connection is called (as `set-process-sentinel').
@@ -1479,7 +1482,7 @@ The method to perform the request is determined from
 	     (setq mes
 		   (cond
 		    ((null status)
-		     (format "Failure: process %s does not exist." proc))
+		     (format "Failure: process %s does not exist" proc))
 		    ((or (memq status '(run stop open listen connect))
 			 (not (memq status '(exit signal closed failed))))
 		     ;; If the process is running, FUNC is not called.
@@ -1487,10 +1490,10 @@ The method to perform the request is determined from
 		    ((and command
 			  (not (= 0 exit-status)))
 		     ;; If the process abnormally exited,
-		     (format "Failure: %s exited abnormally (exit-status=%s)."
+		     (format "Failure: %s exited abnormally (exit-status=%s)"
 			     (car command) exit-status))
 		    ((not (buffer-live-p buffer))
-		     (format "Failure: the buffer for %s is already killed."
+		     (format "Failure: the buffer for %s is already killed"
 			     proc))
 		    (t
 		     (when (functionp pre-process-func)
@@ -1508,7 +1511,18 @@ The method to perform the request is determined from
 			 (apply func proc status connection-info
 				header-info nil))))))
 	   ;; unwind-forms
-	   (when (and mes (twittering-buffer-related-p))
+	   (setq mes
+		 (cond
+		  ((null mes)
+		   nil)
+		  ((string-match "^\\(Failure\\|Response\\): " mes)
+		   (let* ((request (cdr (assq 'request connection-info)))
+			  (method (cdr (assq 'method request)))
+			  (uri (cdr (assq 'uri request))))
+		     (concat mes " for " method " " uri)))
+		  ((twittering-buffer-related-p)
+		   mes)))
+	   (when mes
 	     ;; CLEAN-UP-FUNC can overwrite a message from the return value
 	     ;; of FUNC.
 	     (message "%s" mes))
